# squashfs-tools

./: .gitattributes  .gitignore  .travis.yml  ACKNOWLEDGEMENTS  ACTIONS-README  AUDIT_METHODOLOGY.md  BUILD_WITH_MIMALLOC.sh  CHANGES  CHANGES.md  CONTRIBUTING.md  INSTALL  MIMALLOC.md  README  README-4.5  README-4.5.1  README-4.6  README-4.6.1  README.md  RELEASE-README  SECURITY.md  SECURITY_AUDIT.md  SECURITY_AUDIT_README.md  SECURITY_RECOMMENDATIONS.md  SECURITY_SUMMARY.md  TECHNICAL-INFO  USAGE  USAGE-4.6  USAGE-MKSQUASHFS-4.6  USAGE-SQFSCAT-4.6  USAGE-SQFSTAR-4.6  USAGE-UNSQUASHFS-4.6  VULNERABILITY_DETAILS.md
Documentation/4.5/: INSTALL  USAGE
Documentation/4.5.1/: ACTIONS-README  INSTALL  README  USAGE
Documentation/4.6/: ACTIONS-README  README  TECHNICAL-INFO  USAGE  USAGE-MKSQUASHFS  USAGE-SQFSCAT-4.6  USAGE-SQFSTAR
Documentation/4.6.1/: README  USAGE  USAGE-MKSQUASHFS  USAGE-SQFSCAT  USAGE-SQFSTAR  USAGE-UNSQUASHFS
Documentation/4.7/: INSTALL  README  USAGE  USAGE-MKSQUASHFS  USAGE-SQFSCAT  USAGE-SQFSTAR  USAGE-UNSQUASHFS
Documentation/4.7.1/: INSTALL  README  TECHNICAL-INFO  USAGE-MKSQUASHFS  USAGE-SQFSCAT  USAGE-SQFSTAR  USAGE-UNSQUASHFS
Documentation/4.7.2/: INSTALL  README  USAGE  USAGE-MKSQUASHFS  USAGE-SQFSCAT  USAGE-SQFSTAR  USAGE-UNSQUASHFS
Documentation/4.7.3/: ACTIONS-README  ACTIONS-README.md  INSTALL.md  README  README.md  USAGE  USAGE-MKSQUASHFS  USAGE-MKSQUASHFS.md  USAGE-SQFSCAT  USAGE-SQFSCAT.md  USAGE-SQFSTAR  USAGE-SQFSTAR.md  USAGE-UNSQUASHFS  USAGE-UNSQUASHFS.md  USAGE.md
Documentation/4.7.4/: ACTIONS-README.md  INSTALL  INSTALL.md  README  README.md  USAGE  USAGE-MKSQUASHFS  USAGE-MKSQUASHFS.md  USAGE-SQFSCAT  USAGE-SQFSCAT.md  USAGE-SQFSTAR  USAGE-SQFSTAR.md  USAGE-UNSQUASHFS  USAGE.md
Documentation/4.7.5/: USAGE-UNSQUASHFS.md
Documentation/4.7.6/: ACTIONS-README  ACTIONS-README.md  INSTALL  INSTALL.md  README  README.md  USAGE  USAGE-MKSQUASHFS  USAGE-MKSQUASHFS.md  USAGE-SQFSCAT  USAGE-SQFSCAT.md  USAGE-SQFSTAR  USAGE-SQFSTAR.md  USAGE-UNSQUASHFS  USAGE-UNSQUASHFS.md  USAGE.md
Documentation/latest/: ACTIONS-README
Documentation/latest/manpages/: mksquashfs.1  sqfscat.1  sqfstar.1
Documentation/manpages/: .gitattributes  README  mksquashfs.1  sqfscat.1  sqfstar.1  unsquashfs.1
RELEASE-READMEs/: PERFORMANCE.README  README-2.0  README-2.1  README-3.1  README-4.4
examples/: pseudo-file.example
generate-manpages/: functions.sh  install-manpages.sh  mksquashfs-manpage.sh  mksquashfs.h2m  sqfscat-manpage.sh  sqfscat.h2m  sqfstar-manpage.sh  sqfstar.h2m  unsquashfs-manpage.sh  unsquashfs.h2m
kernel/: 2.6.18-patch  2.6.19-patch  README  linux-2.6.22.patch  linux-2.6.23.patch  linux-2.6.24.patch
kernel-2.4/fs/squashfs/: inode.c  squashfs.h  squashfs2_0.c
kernel-2.4/include/linux/: squashfs_fs.h  squashfs_fs_sb.h
kernel/fs/squashfs/: Makefile  block.c  cache.c  dir.c  export.c  file.c  fragment.c  id.c  inode.c  namei.c  squashfs.h  squashfs2_0.c  squashfs_fs.h  squashfs_fs_sb.h  super.c  symlink.c
kernel/include/linux/: squashfs_fs.h  squashfs_fs_i.h  squashfs_fs_sb.h
kernel/kernel-2.4/fs/squashfs/: inode.c  squashfs2_0.c
kernel/kernel-2.4/include/linux/: squashfs_fs.h
kernel/kernel-2.6/fs/squashfs/: cache.c
manpages/: mksquashfs.1  sqfscat.1  sqfstar.1  unsquashfs.1
squashfs-tools/: .gitignore  .mksquashfs.c.swp  CMakeLists.txt  Makefile  Makefile.static  action.c  action.h  alloc.h  archive.c  archive.h  atomic_swap.h  caches-queues-lists.c  caches-queues-lists.h  compressor.c  compressor.h  crc16.c  crc16.h  date.c  date.h  endian_compat.h  error.h  fakerootdb.c  fakerootdb.h  fd_pos.h  fnmatch_compat.h  global.h  gzip_wrapper.c  gzip_wrapper.h  info.c  info.h  limit.c  limit.h  lseek.h  lz4_wrapper.c  lz4_wrapper.h  lzma_wrapper.c  lzma_xz_wrapper.c  lzo_wrapper.c  lzo_wrapper.h  memory.c  (+80 more)
squashfs-tools/cmake/: FindLZ4.cmake  FindLZO.cmake  FindXattr.cmake  FindZSTD.cmake
squashfs-tools/generate-manpages/: functions.sh  install-manpages.sh  mksquashfs-manpage.sh  mksquashfs.h2m  sqfscat-manpage.sh  sqfscat.h2m  sqfstar-manpage.sh  unsquashfs-manpage.sh  unsquashfs.h2m
squashfs-tools/par_mksquashfs/: Makefile  README  mksquashfs.c  read_fs.c
tests/: test_invariant_unsquashfs_xattr.c
